--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>facade</module>
         <module>templateMethod</module>
         <module>state</module>
+        <module>builder</module>
     </modules>
 
     <properties>
