feat(*): prototype pattern

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>templateMethod</module>
         <module>state</module>
         <module>builder</module>
+        <module>prototype</module>
     </modules>
 
     <properties>
