feat(*): proxy pattern

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>builder</module>
         <module>prototype</module>
         <module>flyweight</module>
+        <module>proxy</module>
     </modules>
 
     <properties>
