--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>flyweight</module>
         <module>proxy</module>
         <module>bridge</module>
+        <module>composite</module>
     </modules>
 
     <properties>
