--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>bridge</module>
         <module>composite</module>
         <module>iterator</module>
+        <module>mediator</module>
     </modules>
 
     <properties>
