--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>composite</module>
         <module>iterator</module>
         <module>mediator</module>
+        <module>memento</module>
     </modules>
 
     <properties>
