--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>iterator</module>
         <module>mediator</module>
         <module>memento</module>
+        <module>interpreter</module>
     </modules>
 
     <properties>
