--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>memento</module>
         <module>interpreter</module>
         <module>chainOfResponsibility</module>
+        <module>visitor</module>
     </modules>
 
     <properties>
